--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,11 +3,11 @@ name: Go Build
 on:
   push:
     branches:
-      - "development"
+      - "develop"
   pull_request:
     branches:
       - "main"
-      - "development"
+      - "develop"
 
 jobs:
   build:
